added simple camera link info on config view; added note for too many led channels; added scan width as extra item to datasheet; fixed cable count calculation and renamed method to display what it does -kba